// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote renders as a basic blockquote with custom #className and data attr to test spread. 1`] = `
<blockquote
  className="Blockquote2773719531__root for-which-nobody-can-deny"
  data-testid="blockquote-data-testid"
>
  <div
    className="Blockquote2773719531__content"
  >
    We but mirror the world. All the tendencies present in the outer world are to be found in the world of our body. If we could change ourselves, the tendencies in the world would also change. As a man changes his own nature, so does the attitude of the world change towards him. This is the divine mystery supreme. A wonderful thing it is and the source of our happiness. We need not wait to see what others do.
  </div>
  <footer
    className="Text408270608__root Text408270608---vol-1-2 Blockquote2773719531__desc"
  >
    Mahatma Gandhi
  </footer>
</blockquote>
`;

exports[`Blockquote renders as a blockquote with description as a <cite> node at a larger volume. 1`] = `
<blockquote
  className="Blockquote2773719531__root Blockquote2773719531---variant-8-academic for-which-nobody-can-deny"
>
  <div
    className="Blockquote2773719531__content"
  >
    We but mirror the world. All the tendencies present in the outer world are to be found in the world of our body. If we could change ourselves, the tendencies in the world would also change. As a man changes his own nature, so does the attitude of the world change towards him. This is the divine mystery supreme. A wonderful thing it is and the source of our happiness. We need not wait to see what others do.
  </div>
  <footer
    className="Text408270608__root Text408270608---vol-1-3 Blockquote2773719531__desc"
  >
    <cite>
      Mahatma Gandhi
    </cite>
  </footer>
</blockquote>
`;
